fix(page): spacing issue

--- a/src/app/projects/styles.module.scss
+++ b/src/app/projects/styles.module.scss
@@ -1,5 +1,6 @@
 .projectsPage {
   margin-top: 2rem;
+  padding-bottom: 4rem;
 
   &__container {
     max-width: var(--container-max-size);
